# ngram.c

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  libngram.c  ngram.c  ngram.h  test.sh
src/: libngram.c  libngram.h  ngram.c  ngram.h  test.c
